; ModuleID = '/home/carl/AnghaBench/linux/drivers/scsi/csiostor/extr_csio_lnode.c_csio_lnode_close.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/scsi/csiostor/extr_csio_lnode.c_csio_lnode_close.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.csio_lnode = type { i32 }

@CSIO_LNE_CLOSE = common dso_local global i32 0, align 4
@CSIO_INVALID_IDX = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [15 x i8] c"closed ln :%p\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @csio_lnode_close(%struct.csio_lnode* %0) #0 {
  %2 = alloca %struct.csio_lnode*, align 8
  store %struct.csio_lnode* %0, %struct.csio_lnode** %2, align 8
  %3 = load %struct.csio_lnode*, %struct.csio_lnode** %2, align 8
  %4 = load i32, i32* @CSIO_LNE_CLOSE, align 4
  %5 = call i32 @csio_post_event_lns(%struct.csio_lnode* %3, i32 %4)
  %6 = load %struct.csio_lnode*, %struct.csio_lnode** %2, align 8
  %7 = call i64 @csio_is_phys_ln(%struct.csio_lnode* %6)
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %9, label %13

9:                                                ; preds = %1
  %10 = load i32, i32* @CSIO_INVALID_IDX, align 4
  %11 = load %struct.csio_lnode*, %struct.csio_lnode** %2, align 8
  %12 = getelementptr inbounds %struct.csio_lnode, %struct.csio_lnode* %11, i32 0, i32 0
  store i32 %10, i32* %12, align 4
  br label %13

13:                                               ; preds = %9, %1
  %14 = load %struct.csio_lnode*, %struct.csio_lnode** %2, align 8
  %15 = load %struct.csio_lnode*, %struct.csio_lnode** %2, align 8
  %16 = call i32 @csio_ln_dbg(%struct.csio_lnode* %14, i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str, i64 0, i64 0), %struct.csio_lnode* %15)
  ret void
}

declare dso_local i32 @csio_post_event_lns(%struct.csio_lnode*, i32) #1

declare dso_local i64 @csio_is_phys_ln(%struct.csio_lnode*) #1

declare dso_local i32 @csio_ln_dbg(%struct.csio_lnode*, i8*, %struct.csio_lnode*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
